--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,25 +44,22 @@ r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
 [/Script/Engine.UserInterfaceSettings]
 bAuthorizeAutomaticWidgetVariableCreation=False
-FontDPIPreset=Standard
-FontDPI=72
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/uNclearOnlineShooter")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/uNclearOnlineShooter")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="uNclearOnlineShooterGameModeBase")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=EB2B370B423AD816D75FBFBF6E90CA7A
+SecurityToken=3027C4534FD5D32736044BBB0BC9835F
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
@@ -73,3 +70,18 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+
+; If using Sessions
+; bInitServerOnClient=true
+
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
