--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ Session.vim
 /Plugins/MultiplayerSessions/Binaries/**
 /Plugins/MultiplayerSessions/Intermediate/**
 !/Plugins/MultiplayerSessions/Source/**
+
+# Maps
+/Content/Maps/**
+/Content/__ExternalActors__/**
+/Content/__ExternalObjects__/**
