--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ Session.vim
 /Content/Characters/Mannequin**
 /Content/ThirdPerson/**
 /Content/LevelPrototyping/**
+
+# Assets
+/Content/Assets/**
