--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/Maps/Lobby.Lobby
 EditorStartupMap=/Game/Maps/NewMap.NewMap
+TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
