--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -94,6 +94,7 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+MapsToCook=(FilePath="/Game/Maps/NewMap")
++MapsToCook=(FilePath="/Game/Maps/ShooterMap")
 +MapsToCook=(FilePath="/Game/Maps/Lobby")
++MapsToCook=(FilePath="/Game/Maps/TransitionMap")
 
